progressed to templates and context

--- a/leads/templates/leads/home_page.html
+++ b/leads/templates/leads/home_page.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>First Page</title>
 </head>
 <body>
     <h1>Dude, You're Gettin' a Dell</h1>    
     <p>Good times roll.</p>
+    <p>...and the random number is <strong>{{number}}</strong></p>
 </body>
 </html>
