--- a/leads/templates/leads/home_page.html
+++ b/leads/templates/leads/home_page.html
@@ -10,5 +10,13 @@
     <h1>Dude, You're Gettin' a Dell</h1>    
     <p>Good times roll.</p>
     <p>...and the random number is <strong>{{number}}</strong></p>
+
+    <p>there are leads:</p>
+    <ul>
+        {% for lead in leads_list %}
+            <li>{{lead}}</li>
+        {% endfor %}
+    </ul>
+
 </body>
 </html>
