--- a/leads/templates/leads/home_page.html
+++ b/leads/templates/leads/home_page.html
@@ -1,22 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>First Page</title>
-</head>
-<body>
-    <h1>Dude, You're Gettin' a Dell</h1>    
-    <p>Good times roll.</p>
-    <p>...and the random number is <strong>{{number}}</strong></p>
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>First Page</title>
+    </head>
+    <body>
+        <h1>Dude, You're Gettin' a Dell</h1>
+        <p>Good times roll.</p>
+        <p>...and the random number is <strong>{{number}}</strong></p>
 
-    <p>there are leads:</p>
-    <ul>
-        {% for lead in leads_list %}
-            <li>{{lead}}</li>
-        {% endfor %}
-    </ul>
-
-</body>
+        <p>
+            there are leads:
+            <a href=" {% url 'leads:leads_list' %}  ">Leads list</a>
+        </p>
+    </body>
 </html>
